<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tetotv_player_audio_short">Audio</string>
    <string name="tetotv_player_audio_tracks">Select audio track</string>
    <string name="tetotv_player_cc_short">CC</string>
    <string name="tetotv_player_size_short">Size</string>
    <string name="tetotv_player_picture_short">Picture</string>
    <string name="tetotv_player_picture">Change picture size</string>
    <string name="tetotv_player_fix_short">Player</string>
    <string name="tetotv_player_fix_video">Choose video player</string>
    <string name="tetotv_player_sources_short">Sources</string>
    <string name="tetotv_player_sources">Choose stream source</string>
    <string name="tetotv_player_watch_party_short">Party</string>
    <string name="tetotv_player_watch_party">Start or show Watch Together room</string>
    <string name="tetotv_player_watch_party_title">Watch Together room</string>
    <string name="tetotv_player_watch_party_copy">Copy code</string>
    <string name="tetotv_player_watch_party_close">Close</string>
    <string name="tetotv_player_watch_party_copied">Room code copied</string>
    <string name="tetotv_player_watch_party_unavailable">Watch Together is unavailable for this player</string>
    <string name="tetotv_player_guest_controls_locked">The host controls playback while you watch together</string>
    <string name="tetotv_player_options_short">Options</string>
    <string name="tetotv_player_options">Playback options</string>
    <string name="tetotv_player_debrid_stream">Debrid stream</string>
    <string name="tetotv_player_caption_size">Caption size</string>
    <string name="tetotv_player_select_caption_size">Choose caption size</string>
    <string name="tetotv_player_caption_size_small">Small</string>
    <string name="tetotv_player_caption_size_medium">Medium</string>
    <string name="tetotv_player_caption_size_large">Large</string>
    <string name="tetotv_player_caption_size_extra_large">Extra large</string>
    <string name="tetotv_player_caption_size_changed">Caption size: %1$s</string>
    <string name="tetotv_player_closed_captions">Select closed captions</string>
    <string name="tetotv_player_closed_captions_off">Closed captions off. Select captions</string>
    <string name="tetotv_player_closed_captions_on">Closed captions on. Select captions</string>
    <string name="tetotv_player_fast_forward">Fast forward</string>
    <string name="tetotv_player_fast_forward_seconds">Fast forward %1$d seconds</string>
    <string name="tetotv_player_forward_seconds">Forward %1$ds</string>
    <string name="tetotv_player_forward_default">Forward 10s</string>
    <string name="tetotv_player_skip_intro">Skip intro</string>
    <string name="tetotv_player_skip_outro">Skip outro</string>
    <string name="tetotv_player_skip_recap">Skip recap</string>
    <string name="tetotv_player_hide_more_controls">Hide more controls</string>
    <string name="tetotv_player_no_audio_tracks">No selectable audio tracks</string>
    <string name="tetotv_player_checking_audio_tracks">Checking every embedded audio track…</string>
    <string name="tetotv_player_dual_audio_single_track">This release says dual audio, but the selected video exposes only one playable audio track.</string>
    <string name="tetotv_player_no_caption_tracks">No closed-caption tracks are available</string>
    <string name="tetotv_player_checking_caption_tracks">Checking embedded and external captions…</string>
    <string name="tetotv_player_track_picker_error">Track selection could not be opened</string>
    <string name="tetotv_player_play_pause">Play or pause</string>
    <string name="tetotv_player_play">Play</string>
    <string name="tetotv_player_pause">Pause</string>
    <string name="tetotv_player_rewind">Rewind</string>
    <string name="tetotv_player_rewind_seconds">Rewind %1$d seconds</string>
    <string name="tetotv_player_back_seconds">Back %1$ds</string>
    <string name="tetotv_player_back_default">Back 10s</string>
    <string name="tetotv_player_select_audio">Audio tracks</string>
    <string name="tetotv_player_select_captions">Closed captions</string>
    <string name="tetotv_player_show_more_controls">Show more controls</string>
    <string name="tetotv_player_time_separator">"  /  "</string>
    <string name="tetotv_player_media3">Media3</string>
    <string name="tetotv_player_local_media3_only">Local and media-server videos use Media3</string>
    <string name="tetotv_player_caption_background">Caption background</string>
    <string name="tetotv_player_caption_background_transparent">Transparent</string>
    <string name="tetotv_player_caption_background_dark">Dark</string>
    <string name="tetotv_player_caption_background_high_contrast">High contrast</string>
    <string name="tetotv_player_caption_background_changed">Caption background: %1$s</string>
    <string name="tetotv_player_footer_hint">D-pad controls  |  J/L seek  |  Menu/Y options</string>
    <string name="tetotv_player_guest_controls_hint">Following host  |  Party for room status  |  Back to exit</string>
</resources>
